--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=Taskmgmt
 
-spring.datasource.url=jdbc:mysql://localhost:3306/task?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskmgm
+spring.datasource.username=postgres
+spring.datasource.password=0000
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-logging.level.org.hibernate.SQL=DEBUG
 
