added global api

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Taskmgmt
 
+server.servlet.context-path =/api
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskmgm
 spring.datasource.username=postgres
 spring.datasource.password=0000
