--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.data.jdbc.repositories.enabled=false
+logging.level.org.springframework.security=DEBUG
 
