added task module

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,4 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.data.jdbc.repositories.enabled=false
 logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.com.telusko=DEBUG
+
 
